# AegisDet

AegisDet Vault/project-code/: .gitignore  README.md  pyproject.toml  requirements.txt
AegisDet Vault/project-code/configs/: README.md  aegisdet_mini.yaml  kd_progressive_dual_teacher.yaml
AegisDet Vault/project-code/data/: README.md
AegisDet Vault/project-code/reports/: README.md
AegisDet Vault/project-code/scripts/: audit_vault.py  benchmark_latency.py  bootstrap_windows.ps1  check_environment.py  train_baseline.py
AegisDet Vault/project-code/tests/: README.md  test_geometry.py  test_router.py
aegisdet/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  HOOKS.md  README.md  pyproject.toml  requirements.txt
aegisdet/.githooks/: post-checkout  post-commit  post-merge  pre-commit
aegisdet/.github/: copilot-instructions.md
aegisdet/.github/workflows/: ci.yml
aegisdet/apps/demo/: README.md
aegisdet/assets/: README.md
aegisdet/configs/data/: README.md  wildlife.yaml
aegisdet/configs/deployment/: README.md
aegisdet/configs/distillation/: README.md  teacher_rtdetrv4x.yaml  teacher_yolo26x.yaml
aegisdet/configs/models/: README.md  baseline_yolo26n.yaml
aegisdet/data/: README.md
aegisdet/docs/: README.md
aegisdet/notebooks/: README.md
aegisdet/reports/: README.md
aegisdet/scripts/: README.md  bootstrap_windows.ps1  evaluate_baseline.py  export_onnx.py  run_aegisdet_mini.py  train_baseline.py
aegisdet/tests/: test_crop_refine.py  test_merge_metrics.py
aegisdet/tools/: install_hooks.py  watch_workspace.py  workspace_sync.py
(+424 files in other folders)
