[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisdet"
version = "0.1.0"
description = "Adaptive CNN-first edge object detection research framework"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.13"
authors = [{name = "Aarush Katam"}]
dependencies = [
  "numpy>=1.26,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
ml = [
  "ultralytics>=8.4.0,<9",
  "opencv-python>=4.10,<6",
  "onnx>=1.17,<2",
  "onnxruntime>=1.20,<2",
  "pandas>=2.2,<3",
  "matplotlib>=3.9,<4",
  "tqdm>=4.66,<5",
]
dev = [
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
