[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisdet"
version = "0.1.0"
description = "AegisDet-Pro adaptive edge object detection research starter"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26,<3",
  "PyYAML>=6,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
